# BoDealer

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  codex.patch  docker_instructions.txt  start_from.txt  toolset_VS19.bat  toolset_VS22.bat
carp/: Carpenter.cu
dds-develop/: README.txt
disdocs/: AppendixC.txt  OpportunisticListener.txt  PipelineProtocol.txt
platonenko/: dump.bat.txt
scripts/: build_debug.bat  launch.json.txt
sln/: update_vcxproj.py  wa_twelve.natvis
txt_solved/: 4M_Patton.txt  7Dor7NT.txt  Big4MajOn54.txt  Develop6PlusH.txt  DiamondsOver3H.txt  DubShurig.txt  Etalon_3NT.txt  Etalon_6NT.txt  FebMajorsRespOnPercision.txt  ImpsLevkovich.txt  JagodinaInvite.txt  MinorSuperFit.txt  MixedInv.txt  Morozov_eval.txt  Ognjen_5C_or_4SX.txt  Partizan3631.txt  Tanja_Feb.txt  bid_with_64.txt  combined_game_MM54.txt  dec_12_2425.txt  dec_accept_to_4s.txt  dec_many_hearts.txt  feb_many_hearts.txt  indian.txt  jan_strong_with_hearts.txt  keycards.txt  notes_other_ours.txt  nov_voidwood.txt  (+7 more)
walrus/: CMakeLists.txt  Makefile  OscarCLI.h  OwlTransport.h  OwlTransportHttp.cpp  bodealer  cmake_install.cmake  double-deal.h  json-c.txt  wa4Hands.cpp  waAI.cpp  waAI.h  waBitSuits.cpp  waBitTwelve.cpp  waCompareContracts.cpp  waCompiler.cpp  waConfReader.cpp  waConfTask.cpp  waConfig.cpp  waCrossPlatform.h  waDDSTest.cpp  waDerived.h  waDoubleDeal.cpp  waDoubleDeal.h  waIO.cpp  waIO.h  waInit.cpp  waLayout.h  waMarks.cpp  waMicro.cpp  waMiniUI.cpp  waMulti.cpp  waMulti.h  waOrb.cpp  waOwl.cpp  waProgress.cpp  waRandom.cpp  waSCumul.cpp  waScOpLead.cpp  waScore.cpp  (+23 more)
(+66 files in other folders)
